--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@ title: Igor Simevski
 <div class="blurb">
 	<h1>Hi there, I'm Igor Simevski!</h1>
 	<p>I'm best known as... <a href="/about">Read more...</a></p>
-	<p>MSc Electrical Engineering and IT
+	<p>MSc Electrical Engineering and IT</p>
 </div><!-- /.blurb -->
