--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ title: Igor Simevski
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Igor Simevski!</h1>
-	<p>I'm best known as... Have a look <a href="/cv">at my CV</a></p>
-	<p>MSc Electrical Engineering and IT</p>
+	<p>Have a look <a href="/cv">at my CV</a>.</p>
+	<p>M.Sc. Electrical Engineering and IT</p>
 </div><!-- /.blurb -->
