--- a/index.html
+++ b/index.html
@@ -2,8 +2,25 @@
 layout: default
 title: Igor Simevski
 ---
+Java
+Python
+NodeJs
+AWS Lambda
+Android
+Matlab
+HTML/CSS/Javascript
 <div class="blurb">
 	<h1>Hi there, I'm Igor Simevski!</h1>
-	<p>M.Sc. Electrical Engineering and IT</p>
+	<p>I am M.Sc. Electrical Engineering and IT</p>
+	<p>I have worked with the following programming languages and techonogies:</p>
+	<ul>
+		<li>Java</li>
+		<li>Node JS</li>
+		<li>Android</li>
+		<li>AWS Lambda</li>
+		<li>Python</li>
+		<li>Matlab</li>
+		<li>HTML/CSS/JS</li>
+	</ul>
 	<p>Have a look <a href="/cv">at my CV</a>.</p>
 </div><!-- /.blurb -->
