--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Igor Simevski
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Igor Simevski!</h1>
-	<p>I am M.Sc. Electrical Engineering and IT</p>
+	<p>I am M.Sc. Electrical Engineering and IT.</p>
 	<p>I have worked with the following programming languages and techonogies:</p>
 	<ul>
 		<li>Java</li>
