--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Igor Simevski
 <div class="blurb">
 	<h1>Hi there, I'm Igor Simevski!</h1>
 	<p>I am M.Sc. Electrical Engineering and IT.</p>
-	<p>I have worked with the following programming languages and techonogies:</p>
+	<p>Here are some of the programming languages and techonogies I have worked with:</p>
 	<ul>
 		<li>Java</li>
 		<li>Node JS</li>
