--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Igor Simevski
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Igor Simevski!</h1>
-	<p>I am M.Sc. Electrical Engineering and IT.</p>
+	<p>I am M.Sc. Electrical Engineering and IT and a Technical Lead.</p>
 	<p>Here are some of the programming languages and techonogies I have worked with:</p>
 	<ul>
 		<li>Java</li>
@@ -15,5 +15,5 @@ title: Igor Simevski
 		<li>Matlab</li>
 		<li>HTML/CSS/JS</li>
 	</ul>
-	<p>Have a look <a href="/cv">at my CV</a>.</p>
+	<p>For more details, have a look <a href="/cv">at my CV</a>.</p>
 </div><!-- /.blurb -->
