--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Igor Simevski
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Igor Simevski!</h1>
+	<h1>Hello there, I'm Igor Simevski!</h1>
 	<p>I am M.Sc. Electrical Engineering and IT and a Technical Lead.</p>
 	<p>Here are some of the programming languages and techonogies I have worked with:</p>
 	<ul>
