--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Igor Simevski
 ---
 <div class="blurb">
 	<h1>Hello there, I'm Igor Simevski!</h1>
-	<p>I am M.Sc. Electrical Engineering and IT and a Technical Lead.</p>
+	<p>I am M.Sc. in Electrical Engineering and IT and a Technical Lead.</p>
 	<p>Here are some of the programming languages and techonogies I have worked with:</p>
 	<ul>
 		<li>Java</li>
