--- a/cv/index.html
+++ b/cv/index.html
@@ -7,11 +7,11 @@ title: Igor Simevski
 
 	<p>Here are some projects I have worked on:</p>
 	<ul>
-		<li>(Phone.com) CTI integration in Salesforce, Zoho - Integration of VOIP services and metadata in various CRM systems. (Click2Call, Real-Time Call Info Display, Call Logging)</li>
-		<li>Location Dependent Automatic Parking Gate Control - System for initiating gate opening depending on proximity to location.</li>
-		<li>C Compiler for Dependable Processor - C Compiler developed with Java programming language and JavaCC Parser Generator. Developed own parser with help of JavaCC. The compiler’s output is assembly code for a dependable processor with an original instruction set developed by IHP Institute for High Performance Microelectronics in Frankfurt (Oder).</li>
-		<li>Off-grid electrical system with Remote Control of Electric Devices- Android application for Remote control of electric devices over Bluetooth Low Energy protocol. The off-grid system is powered by a battery charged by Sun collectors.</li>
-		<li>Real-time Audio processing / HLS streaming server</li>
-		<li>Real-time Event Report System - A system that unifies event reporting to Police, Fire Departments and First Aid Medical departments. The system consists of Android application for Reporting real-time events (accidents, thefts, fires, medical emergencies, etc...) and Server for receiving and managing the events.</li>
+		<li><b>(Phone.com) CTI integration in Salesforce, Zoho</b> - Integration of VOIP services and metadata in various CRM systems. (Click2Call, Real-Time Call Info Display, Call Logging)</li>
+		<li><b>Location Dependent Automatic Parking Gate Control</b> - System for initiating gate opening depending on proximity to location.</li>
+		<li><b>C Compiler for Dependable Processor</b> - C Compiler developed with Java programming language and JavaCC Parser Generator. Developed own parser with help of JavaCC. The compiler’s output is assembly code for a dependable processor with an original instruction set developed by IHP Institute for High Performance Microelectronics in Frankfurt (Oder).</li>
+		<li><b>Off-grid electrical system with Remote Control of Electric Devices</b> - Android application for Remote control of electric devices over Bluetooth Low Energy protocol. The off-grid system is powered by a battery charged by Sun collectors.</li>
+		<li><b>Real-time Audio processing / HLS streaming server</b></li>
+		<li><b>Real-time Event Reporting System</b> - A system that unifies event reporting to Police, Fire Departments and First Aid Medical departments. The system consists of Android application for Reporting real-time events (accidents, thefts, fires, medical emergencies, etc...) and Server for receiving and managing the events.</li>
 	</ul>
 </div><!-- /.blurb -->
