--- a/cv/index.html
+++ b/cv/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Igor Simevski
 ---
 <div class="blurb">
-	<h1>Igor Simevski's CV!</h1>
+	<h1>Igor Simevski's CV</h1>
 
 	<p>Here are some projects I have worked on:</p>
 	<ul>
