--- a/cv/index.html
+++ b/cv/index.html
@@ -6,7 +6,7 @@ title: Igor Simevski
 	<h1>Igor Simevski's CV</h1>
 
 	<p>Here are some projects I have worked on:</p>
-	<ul>
+	<ul class="projects">
 		<li><b>(Phone.com) CTI integration in Salesforce, Zoho</b> - Integration of VOIP services and metadata in various CRM systems. (Click2Call, Real-Time Call Info Display, Call Logging)</li>
 		<li><b>Location Dependent Automatic Parking Gate Control</b> - System for initiating gate opening depending on proximity to location.</li>
 		<li><b>C Compiler for Dependable Processor</b> - C Compiler developed with Java programming language and JavaCC Parser Generator. Developed own parser with help of JavaCC. The compiler’s output is assembly code for a dependable processor with an original instruction set developed by IHP Institute for High Performance Microelectronics in Frankfurt (Oder).</li>
