--- a/cv/index.html
+++ b/cv/index.html
@@ -5,8 +5,9 @@ title: Igor Simevski
 <div class="blurb">
 	<h1>Igor Simevski's CV</h1>
 
+	<h3>Projects</h3>
 	<p>Here are some projects I have worked on:</p>
-	<ul class="projects">
+	<ul class="default-list">
 		<li><b>(Phone.com) CTI integration in Salesforce, Zoho</b> - Integration of VOIP services and metadata in various CRM systems. (Click2Call, Real-Time Call Info Display, Call Logging)</li>
 		<li><b>Location Dependent Automatic Parking Gate Control</b> - System for initiating gate opening depending on proximity to location.</li>
 		<li><b>C Compiler for Dependable Processor</b> - C Compiler developed with Java programming language and JavaCC Parser Generator. Developed own parser with help of JavaCC. The compiler’s output is assembly code for a dependable processor with an original instruction set developed by IHP Institute for High Performance Microelectronics in Frankfurt (Oder).</li>
@@ -14,4 +15,9 @@ title: Igor Simevski
 		<li><b>Real-time Audio processing / HLS streaming server</b></li>
 		<li><b>Real-time Event Reporting System</b> - A system that unifies event reporting to Police, Fire Departments and First Aid Medical departments. The system consists of Android application for Reporting real-time events (accidents, thefts, fires, medical emergencies, etc...) and Server for receiving and managing the events.</li>
 	</ul>
+	<h3>Hobbies</h3>
+	<ul class="default-list">
+		<li>Music. Playing Guitar/Piano</li>
+	</ul>
+	
 </div><!-- /.blurb -->
