--- a/cv/index.html
+++ b/cv/index.html
@@ -5,6 +5,8 @@ title: Igor Simevski
 <div class="blurb">
 	<h1>Igor Simevski's CV</h1>
 
+	<h3>General</h3>
+	<p>I have lead teams/projects using various programming languages and technologies. I have experience with DevOps operations, actively maintaining several projects.</p>
 	<h3>Projects</h3>
 	<p>Here are some projects I have worked on:</p>
 	<ul class="default-list">
@@ -14,6 +16,17 @@ title: Igor Simevski
 		<li><b>Off-grid electrical system with Remote Control of Electric Devices</b> - Android application for Remote control of electric devices over Bluetooth Low Energy protocol. The off-grid system is powered by a battery charged by Sun collectors.</li>
 		<li><b>Real-time Audio processing / HLS streaming server</b></li>
 		<li><b>Real-time Event Reporting System</b> - A system that unifies event reporting to Police, Fire Departments and First Aid Medical departments. The system consists of Android application for Reporting real-time events (accidents, thefts, fires, medical emergencies, etc...) and Server for receiving and managing the events.</li>
+	</ul>
+	<h3>Languages and technologies</h3>
+	<ul class="default-list">
+		<li>Java</li>
+		<li>Node JS</li>
+		<li>Android</li>
+		<li>AWS Lambda</li>
+		<li>Go</li>
+		<li>Python</li>
+		<li>Matlab</li>
+		<li>HTML/CSS/JS</li>
 	</ul>
 	<h3>Hobbies</h3>
 	<ul class="default-list">
