--- a/cv/index.html
+++ b/cv/index.html
@@ -18,7 +18,7 @@ title: Igor Simevski
 		<li><b>Real-time Event Reporting System</b> - A system that unifies event reporting to Police, Fire Departments and First Aid Medical departments. The system consists of Android application for Reporting real-time events (accidents, thefts, fires, medical emergencies, etc...) and Server for receiving and managing the events.</li>
 	</ul>
 	<h3>Languages and technologies</h3>
-	<ul class="default-list">
+	<ul class="single-line">
 		<li>Java</li>
 		<li>Node JS</li>
 		<li>Android</li>
