--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Igor Simevski
 	<h1>Hello there, I'm Igor Simevski!</h1>
 	<p>I am M.Sc. in Electrical Engineering and IT and a Technical Lead.</p>
 	<p>Here are some of the programming languages and techonogies I have worked with:</p>
-	<ul class="default-list">
+	<ul class="single-line">
 		<li>Java</li>
 		<li>Node JS</li>
 		<li>Android</li>
