--- a/cv/index.html
+++ b/cv/index.html
@@ -6,7 +6,7 @@ title: Igor Simevski
 	<h1>Igor Simevski's CV</h1>
 
 	<h3>General</h3>
-	<p>I have lead teams/projects using various programming languages and technologies. I have experience with DevOps operations, actively maintaining several projects.</p>
+	<p>I have lead teams/projects using various programming languages and technologies. I have experience with DevOps and sys admin operations, actively maintaining several projects.</p>
 	<h3>Projects</h3>
 	<p>Here are some projects I have worked on:</p>
 	<ul class="default-list">
