added alt to images

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ permalink: /
           {% endfor %}
           {% for language in site.data.index.language %}
           <li>
-            <a id="set_lang_{{ language.locale }}" class="btn btn-sm set_{{ language.locale }}" data-locale="{{ language.locale }}">
+            <a id="set_lang_{{ language.locale }}" alt="{{ language.locale }}" class="btn btn-sm set_{{ language.locale }}" data-locale="{{ language.locale }}">
               <img src="{{ language.flag | prepend: site.baseurl }}" height="16" width="16">
             </a>
           </li>
