--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@ permalink: /
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right" id="i18_navbar">
           {% for section in site.data.landing %}
-          <li>
+          <li class="nav-item">
             {% if section.page %}
-              <a class="page-scroll" href="{{ section.page}} ">
+              <a class="nav-link page-scroll" href="{{ section.page}} ">
             {% else %}
-              <a class="page-scroll" href="{{ section.id | prepend: '#'}} ">
+              <a class="nav-link page-scroll" href="{{ section.id | prepend: '#'}} ">
             {% endif %}
               <span data-i18n="{{ section.i18n }}">{{ section.name }}</span>
             </a>
           </li>
           {% endfor %}
           {% for language in site.data.index.language %}
-          <li>
-            <a id="set_lang_{{ language.locale }}" class="btn btn-sm set_{{ language.locale }}" data-locale="{{ language.locale }}">
+          <li class="nav-item">
+            <a id="set_lang_{{ language.locale }}" class="nav-link btn btn-sm set_{{ language.locale }}" data-locale="{{ language.locale }}">
               <img alt="flag {{ language.locale }}" src="{{ language.flag | prepend: site.baseurl }}" height="16" width="16">
             </a>
           </li>
