--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ permalink: /
         <a class="navbar-brand" href="#page-top" id="i18_title"><span data-i18n="website.title">{{ site.title }}</span></a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right" id="i18_navbar">
+        <ul class="navbar-nav ml-auto" id="i18_navbar">
           {% for section in site.data.landing %}
           <li class="nav-item">
             {% if section.page %}
