--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ permalink: /
 ---
 
 <div class="navbar-wrapper">
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top" role="navigation">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" role="navigation" id="navbar1">
     <div class="container">
       <div class="navbar-header page-scroll">
         <a class="navbar-brand" href="#page-top" id="i18_title"><span data-i18n="website.title">{{ site.title }}</span></a>
