--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ permalink: /
         <span class="navbar-toggler-icon"></span>
       </button>
       <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav nav-tabs navbar-nav ml-auto" id="i18_navbar">
+        <ul class="nav nav-tabs navbar-nav ms-auto" id="i18_navbar">
           {% for section in site.data.landing %}
           <li class="nav-item">
             {% if section.page %}
