--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ permalink: /
         <a class="navbar-brand" href="#page-top" id="i18_title"><span data-i18n="website.title">{{ site.title }}</span></a>
       </div>
       <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
+        <span class="visually-hiddensr-only">Toggle navigation</span>
         <span class="navbar-toggler-icon"></span>
       </button>
       <div id="navbar" class="navbar-collapse collapse">
